tests/error/tracing_errors/not_callable2.py
from guppylang.decorator import guppy

x = guppy.extern("x", "float")


@guppy.comptime
def test() -> None:
    x(1)


guppy.compile(test)
